# lice2

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  ChangeLog  LICENSE  OLD_CHANGELOG.md  README.md  SECURITY.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: mypy.yml  tests.yml
changelog/: index.html
configuration/: index.html
contributing/: index.html
docs/: configuration.md  index.md  installation.md  integration.md  overview.md  usage.md
future_plans/: index.html
installation/: index.html
lice/: __init__.py  core.py
lice/tests/: test_lice.py
lice2/: __init__.py  cli.py  config.py  constants.py  core.py  helpers.py
lice2/api/: __init__.py  api.py  exceptions.py
lice2/templates/: __init__.py  template-afl3.txt  template-agpl3.txt  template-al2.txt  template-apache.txt  template-bsd2.txt  template-bsd3.txt  template-cc_by-header.txt  template-cc_by_nc-header.txt  template-cc_by_nc_sa-header.txt  template-edl.txt  template-epl.txt  template-eupl.txt  template-gpl2.txt  template-gpl3.txt  template-isc.txt  template-lgpl.txt  template-mit.txt  template-mpl.txt  template-ofl.txt  template-unlicense.txt  template-wtfpl.txt  template-zlib.txt
lice2/tests/: conftest.py  test_api.py  test_cli.py  test_lice.py
overview/: index.html
search/: search_index.json
src/: __init__.py  core.py  template-cc0-header.txt  template-cc_by_nc_nd-header.txt  template-cc_by_nd-header.txt  template-cc_by_sa-header.txt
src/tests/: __init__.py  test_lice.py
usage/: index.html
