[tool.poetry]
name = "lice2"
version = "0.8.0"
description = "Generate license files for your projects"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "BSD"
readme = "README.md"

packages = [{ include = "lice2", from = "." }]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.scripts]
lice = "lice2.core:main"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
# linting, type-checking and security checks
mypy = ">=1.4.1"
pre-commit = ">=3.3.3"
ruff = ">=0.6.0"
pymarkdownlnt = ">=0.9.21"

# testing
pytest = ">=8.3.2"
pytest-cov = ">=4,<6"
pytest-sugar = ">=0.9.7,<1.1.0"
pytest-randomly = ">=3.13.0"
pytest-reverse = ">=1.7.0"
pytest-mock = ">=3.11.1"
mock = ">=5.1.0"
poethepoet = ">=0.27.0"

# changelog generation
github-changelog-md = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
pre.cmd = "pre-commit run --all-files"
pre.help = "Run pre-commit checks"
mypy.cmd = "mypy . --strict"
mypy.help = "Run mypy checks"
format.help = "Format code with Ruff"
format.cmd = "ruff format ."
ruff.help = "Run Ruff checks"
ruff.cmd = "ruff check --output-format=concise ."

changelog.cmd = "github-changelog-md"
changelog.help = "Generate a changelog"

[tool.pytest.ini_options]
addopts = ["--cov", "--cov-report", "term-missing", "--cov-report", "html"]
filterwarnings = []
mock_use_standalone_module = true

[tool.coverage.run]
source = ["lice2"]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 80
lint.select = ["ALL"] # we are being very strict!
lint.ignore = [
  "ANN101",
  "ANN102",
  "PGH003",
  "FBT002",
  "FBT003",
  "B006",
] # These rules are too strict even for us 😝
lint.extend-ignore = [
  "COM812",
  "ISC001",
] # these are ignored for ruff formatting

src = ["lice2"]
target-version = "py39" # minimum python version supported

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator", "pydantic.root_validator"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"lice2/tests/**/*.py" = [
  "S101",   # we can (and MUST!) use 'assert' in test files.
  "ANN001", # annotations for fixtures are sometimes a pain for test files
  "ARG00",  # test fixtures often are not directly used
]


[tool.ruff.lint.isort]
known-first-party = ["lice2"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.9"

[[tool.mypy.overrides]]
disable_error_code = ["method-assign", "no-untyped-def", "attr-defined"]
module = "tests.*"
